docs: add README screenshots
